[package]
name = "axfrnotify"
version = "0.0.4"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Sends an NOTIFY message to a secondary name server to initiate a zone refresh for a specific domain name."
repository = "https://github.com/lukaspustina/axfr_notify.git"
documentation = "http://lukaspustina.github.io/axfr_notify"
readme = "README.md"
license = "MIT"
keywords = ["dns", "axfr", "notify"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]

[[bin]]
name = "axfrnotify"
path = "src/main.rs"

[dependencies]
clap = "2"
futures = "^0.1"
tokio-core = "^0.1"
trust-dns = { git = "https://github.com/bluejekyll/trust-dns.git" }

