[package]
name = "axfrnotify"
version = "0.1.0"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Sends a NOTIFY request to a secondary name server to initiate a zone refresh for a specific domain name."
repository = "https://github.com/trust-dns/axfrnotify.git"
readme = "README.md"
license = "MIT"
keywords = ["dns", "axfr", "notify"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]

[[bin]]
name = "axfrnotify"
path = "src/main.rs"

[dependencies]
clap = "2"
futures = "^0.1"
tokio-core = "^0.1"
trust-dns = "^0.9.3"

